--- a/style-blogs.css
+++ b/style-blogs.css
@@ -11,7 +11,7 @@ body {
   margin: 1rem auto;
   box-shadow: 0 3px 7px -1px rgba(0, 0, 0, .1);
   margin-bottom: 1.6%;
-  background: rgb(246, 0, 0);
+  background: black;
   line-height: 1.6em;
   font-family: 'Quicksand', sans-serif;
   border-radius: 10px;
